--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -125,7 +125,7 @@
         <div class="span4">
           <img class="img-circle" src="https://alpineshop.webconnex.com/uploads/wysiwyg/1400/images/Yosemite%202.jpg">
           <h2>Yosemite</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p>Yosemite Falls usually stops flowing in late August. The cascade is fed solely by snowmelt, so the peak flow is in late May, when high snows in the Sierra Nevada melt. Over the warm summer months the flow dries up—but returns around October, when snow again begins to fall.</p>
           <p><a class="btn" href="/parks">View details &raquo;</a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
